--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="showcase">
       <div class="container">
-        <h1>Exclusive and Professional Web Development</h1>
+        <h1>Exclusive Professional Web Development</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae nemo recusandae minus sint, dolorem libero dolore. Cum a odio quis?</p>
       </div>
     </section>
@@ -34,7 +34,7 @@
         <h1>Subscribe To Our Newsletter</h1>
         <form>
           <input type="email" required placeholder="Enter Email..." />
-          <button type="submit" class="btn"></button>
+          <button type="submit" class="btn">Submit</button>
         </form>
       </div>
     </section>
