--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li class="current"><a href="about.html">About</a></li>
-            <li><a href="services">Services</a></li>
+            <li><a href="services.html">Services</a></li>
           </ul>
         </nav>
       </div>
